[tool.poetry]
name = "modem_stats"
version = "0.1.0"
description = ""
authors = ["John Dowson <john.dowson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
netmiko = "^3.1.0"
ttp = "^0.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
